# VoiceCoPilot

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  Procfile  README.md  nixpacks.toml  package.json  pnpm-lock.yaml  railway.json  run-voicecopilot.cmd  voicecopilot-api.spec
.cursor/rules/: backend.mdc  core.mdc  frontend.mdc  tests.mdc
apps/api/: .env.example  Dockerfile  build_exe.py  docker-entrypoint.sh  pyproject.toml  railway.toml  requirements.txt
apps/api/src/voicecopilot_api/: __init__.py  config.py  logging_config.py  main.py  sidecar.py
apps/api/src/voicecopilot_api/models/: __init__.py  schemas.py
apps/api/src/voicecopilot_api/routers/: __init__.py  audio.py  context.py  health.py  projects.py  suggestions.py
apps/api/src/voicecopilot_api/services/: __init__.py  context_manager.py  db.py  file_parser.py  llm_provider.py  models.py  project_manager.py  storage.py  transcript_saver.py  transcription.py
apps/extension/: README.md  background.js  content.js  manifest.json  offscreen.html  offscreen.js
apps/web/: .eslintrc.cjs  Dockerfile  docker-entrypoint.sh  index.html  package.json  run-tauri-dev.cmd  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: audio.rs  lib.rs  logging.rs  main.rs
docs/: DEPLOY_WEB.md  SETUP.md
docs/decisions/: 001-audio-and-llm.md  002-web-getdisplaymedia-fallback.md  003-whisper-hallucination-filter.md  004-stt-model-and-silence-rms.md  005-openrouter-models-research.md
docs/specs/: web_audio_extension.md
scripts/: railway-start.js
tests/: conftest.py
tests/integration/: test_api.py  test_projects.py
tests/unit/: test_context_manager.py  test_schemas.py
(+16 files in other folders)
